--- a/MosaicProject/MosaicProject/src/main/webapp/WEB-INF/web.xml
+++ b/MosaicProject/MosaicProject/src/main/webapp/WEB-INF/web.xml
@@ -25,4 +25,8 @@
     <servlet-name>appServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>appServlet</servlet-name>
+    <url-pattern>/privacypolicy</url-pattern>
+  </servlet-mapping>
 </web-app>
